--- a/assets/direction1.css
+++ b/assets/direction1.css
@@ -1,3 +1,12 @@
+
+#war {
+	font-size: 100px;
+	font-family: "Montserrat", sans-serif;
+	font-weight: bold;
+}
+#on
+
+
 body {
 	background-color: #FAFAFA;
 	color: #1E1D1D;
