--- a/assets/direction1.css
+++ b/assets/direction1.css
@@ -15,7 +15,25 @@
 	color: #CF9B0C;
 }
 h1 {
-	line-height: -50%;
+	line-height: 80px;
+}
+h2 { 
+	font-family: "Montserrat", sans-serif;
+	font-size: 20px;
+	font-weight:500;
+	color: #A1A1A1;
+
+}
+header {
+	margin-top: 48px;
+	margin-left: 8px;
+	margin-bottom: 30px;
+	line-height: 10px;
+}
+.flex-container {
+	font-family: "Montserrat", sans-serif;
+	font-size: 16px;
+	font-weight:500;
 }
 
 
