--- a/assets/direction1.css
+++ b/assets/direction1.css
@@ -34,7 +34,13 @@ header {
 	font-family: "Montserrat", sans-serif;
 	font-size: 16px;
 	font-weight:500;
+	border-top: #1E1D1D;
+	border-bottom: #1E1D1D;
+	border-style: inset;
+	padding-top: 16px;
+	padding-bottom: 16px;
 }
+
 
 
 body {
