--- a/assets/direction1.css
+++ b/assets/direction1.css
@@ -10,13 +10,15 @@
 	font-size: 64px;
 }
 #deco {
-	font-family: "Arizonia", cursive;
+	font-family: "Playfair Display", serif;
+	font-style: italic;
 	font-weight: 600;
-	font-size: 122px;
-	color: #CF9B0C;
+	font-size: 102px;
+	color: #241c07;
 }
 h1 {
 	line-height: 80px;
+	color: #cc3d3d;
 }
 h2 { 
 	font-family: "Montserrat", sans-serif;
@@ -26,10 +28,11 @@ h2 {
 
 }
 header {
-	margin-top: 48px;
-	margin-left: 8px;
-	margin-bottom: 30px;
+	padding-top: 48px;
+	padding-left: 8px;
+	padding-bottom: 30px;
 	line-height: 10px;
+	background-color: #eee8df;
 }
 .flex-container {
 	font-family: "Montserrat", sans-serif;
@@ -55,7 +58,6 @@ a :first-child  {
 
 body {
 	background-color: #FAFAFA;
-	color: #1E1D1D;
 }
 h3 {
 	font-family: "Montserrat", sans-serif;
