--- a/assets/direction1.css
+++ b/assets/direction1.css
@@ -1,19 +1,21 @@
 
 
 #complete {
-	font-family: "DM Serif Text", serif;
-	font-style: italic;
-	font-style: italic;
-	font-weight: 600;
+	font-family: Helvetica, sans-serif;
+	font-weight: bolder;
 	font-size: 80px;
 	color: #241c07;
 }
 h1 {
-	line-height: 100px;
+	line-height: 70px;
 	color: #cc3d3d;
-	font-size: 90px;
-	font-family: "DM Serif Text", serif;
+	font-size: 30px;
+	font-family: "Federo";
 	font-weight: bold;
+}
+.secondhead {
+	font-size: 30px;
+	line-height: 50px;
 }
 h2 { 
 	font-family: "Manrope", sans-serif;
@@ -26,7 +28,7 @@ header {
 	padding-top: 48px;
 	padding-left: 8px;
 	padding-bottom: 10px;
-	line-height: 70px;
+	line-height: 100px;
 	background-color: #eee8df;
 }
 .flex-container {
