Changed the position of the links and added an intro text

--- a/assets/direction1.css
+++ b/assets/direction1.css
@@ -64,9 +64,9 @@ body {
 	background-color: #FAFAFA;
 }
 h3 {
-	font-family: "DM Serif Text", serif;
+	font-family: "Raleway", sans-serif;
 	font-weight: bold;
-	font-size: 32px;
+	font-size: 30px;
 	color: #241c07;
 	margin-bottom: 20px;
 }
