--- a/assets/direction1.css
+++ b/assets/direction1.css
@@ -77,7 +77,7 @@ h3 {
 h4 {
 	font-family: "Raleway", sans-serif;
 	font-weight: 600;
-	font-size: 20px;
+	font-size: 18px;
 	color: #8c8c8c;
 	margin-bottom: 20px;
 
@@ -101,19 +101,18 @@ p {
 
 .footer {
 	font-size: 18px;
-	font-family: "Montserrat", sans-serif;
+	font-family: "Raleway", sans-serif;
 	font-weight: 600;
-	color: #777777;
+	color: #e3e3e3;
 }
 .authorfooter {
 	font-size: 32px;
-	font-family: "Montserrat", sans-serif;
+	font-family: "Raleway", sans-serif;
 	font-weight: bold;
-	color: #1E1D1D;
+	color: #181818;
 }
 footer {
-	border-top: #1E1D1D;
-	border-style: inset;
+	background-color: #e3e3e3;
 	line-height: 0px;
 	padding-bottom: 30px;
 	padding-left: 8px;
