--- a/assets/direction2.css
+++ b/assets/direction2.css
@@ -83,7 +83,14 @@ a {
 	font-weight: 400;
 	font-size: 16px;
 }
-
+.articlelink {
+	display: flex;
+	gap: 12px;
+}
+#arrow2 {
+	color:  rgb(222, 53, 27);
+	font-size: 30px;
+}
 footer {
 	color: #e4e4e4;
 	background-color: #181314;
