--- a/assets/direction2.css
+++ b/assets/direction2.css
@@ -27,7 +27,7 @@ h2 {
 	font-size: 24px;
 }
 article {
-	margin: 10px;
+	
 	margin-top: 40px;
 	font-family: "Raleway", sans-serif;
 }
@@ -48,16 +48,19 @@ h4 {
 	color: #616161;
 	margin-bottom: 18px;
 }
+
+section {
+	margin: 10px;
+	margin-bottom: 30px;
+}
 .articlesection {
 	border: #111111;
 	border-style: dashed;
 	border-radius: 12px;
 	padding: 10px;
+	margin: 5px;
+	margin-bottom: 20px;
 
-}
-
-section {
-	margin-bottom: 30px;
 }
 #circle {
 	color: rgb(222, 53, 27);
@@ -94,6 +97,16 @@ a {
 footer {
 	color: #e4e4e4;
 	background-color: #181314;
-	margin: 0;
+	padding-left: 10px;
+	padding-bottom: 60px;
 
+}
+.footer {
+	font-size: 20px;
+	font-family: "Limelight", sans-serif;
+}
+.authorfooter {
+	font-size: 40px;
+	font-family: "Londrina Shadow", sans-serif;
+	line-height: 10px;
 }
