--- a/assets/direction3.css
+++ b/assets/direction3.css
@@ -1,3 +1,120 @@
-p { 
-	color: yellow;
+
+header {
+	background-color: #000001;
+	padding-left: 10px;
+	padding-bottom: 10px;
+	padding-top: 40px;
+	font-family: "Montserrat", sans-serif;
+	line-height: 90px;
+}
+#deco {
+	color: #050505;
+}
+mark {
+	background-color: rgb(229, 162, 7);
+}
+#invisible {
+	font-family: "Montserrat", sans-serif;
+	font-weight: bold;
+	font-size: 100px;
+	color: #ededed;
+}
+#in {
+	color: #616161;
+}
+h1 {
+	font-size: 40px;
+	font-weight: 600;
+	color: #d3d3d3;
+	line-height: 90px;
+}
+h2 {
+	padding-top: 150px;
+	font-size: 24px;
+	color: rgb(229, 162, 7);
+}
+article {
+	
+	margin-top: 40px;
+	font-family: "Raleway", sans-serif;
+}
+p {
+	font-size: 16px;
+	line-height: 172%;
+	margin-bottom: 40px;
+}
+h3 {
+	font-family: "Limelight", sans-serif;
+	margin-bottom: 20px;
+	font-size: 28px;
+}
+h4 {
+	font-size: 18px;
+	font-family: "Raleway", sans-serif;
+	font-weight: 700;
+	color: #616161;
+	margin-bottom: 18px;
+}
+
+section {
+	margin: 10px;
+	margin-bottom: 30px;
+}
+.articlesection {
+	border: #111111;
+	border-style: dashed;
+	border-radius: 12px;
+	padding: 10px;
+	margin: 5px;
+	margin-bottom: 20px;
+
+}
+#circle {
+	color: rgb(222, 53, 27);
+}
+.flex-container {
+	display: flex;
+	padding-left: 10px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	background-color: rgb(229, 162, 7);
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0;
+}
+#plus {
+	color: rgb(15, 15, 15);
+	font-size: 20px;
+	
+}
+a {
+	padding-right: 70px;
+	color: rgb(15, 15, 15);
+	font-family: "Montserrat", sans-serif;
+	font-weight: 600;
+	font-size: 20px;
+}
+.articlelink {
+	display: flex;
+	gap: 12px;
+}
+#arrow2 {
+	color:  rgb(222, 53, 27);
+	font-size: 30px;
+}
+footer {
+	color: #e4e4e4;
+	background-color: #181314;
+	padding-left: 10px;
+	padding-bottom: 60px;
+
+}
+.footer {
+	font-size: 20px;
+	font-family: "Limelight", sans-serif;
+}
+.authorfooter {
+	font-size: 40px;
+	font-family: "Londrina Shadow", sans-serif;
+	line-height: 10px;
 }
