Added the articles section

--- a/assets/direction3.css
+++ b/assets/direction3.css
@@ -77,8 +77,8 @@ h3 {
 h4 {
 	font-size: 18px;
 	font-family: "Montserrat", sans-serif;
-	font-weight: 700;
-	color: #a9a9a9;
+	font-weight: 500;
+	color: #808080;
 	margin-bottom: 18px;
 }
 .articleintro {
