--- a/assets/direction1.css
+++ b/assets/direction1.css
@@ -71,6 +71,9 @@ h3 {
 	margin-bottom: 20px;
 	line-height: 40px;
 }
+.articlesmain {
+	margin-left: 10px;
+}
 .articlename {
 	margin-bottom: 10px;
 }
