--- a/article-factory/style.css
+++ b/article-factory/style.css
@@ -40,8 +40,9 @@ article {
 p {
 	font-size: 18px;
 	line-height: 172%;
-	padding-bottom: 40px;
+	padding-bottom: 20px;
 	font-family: "Montserrat", sans-serif;
+	margin: 10px;
 
 }
 
