--- a/article-crime/style.css
+++ b/article-crime/style.css
@@ -1,13 +1,14 @@
 
 body {
 	color: #030303;
+	margin: 0;
 }
 header {
 	color: #0a0a0a;
 	font-family: "Playfair Display", serif;
 	font-style: italic;
 	line-height: 10px;
-	padding: 10px;
+	padding: 16px;
 	padding-top: 40px;
 }
 h1 {
@@ -41,12 +42,12 @@ h3 {
 }
 .readnext {
 	margin-top: 50px;
-	margin-bottom: 100px;
+	margin-bottom: 200px;
+	margin: 16px;
 }
 
 article {
-	margin: 12px;
-	margin-top: 40px;
+	margin-top: 16px;
 	margin-bottom: 10px;
 	font-size: 16px;
 	font-family: "Merriweather Sans", serif;
@@ -56,6 +57,18 @@ article {
 .bigtext1 {
 	font-size: 26px;
 	line-height: 180%;
+}
+p {
+	margin: 16px;
+}
+.withbackground {
+	background-color: #D9D9D9;
+	padding-bottom: 20px;
+	padding-top: 20px
+	
+}
+section {
+	margin-bottom: 10px;
 }
 
 
