--- a/article-discipline/style.css
+++ b/article-discipline/style.css
@@ -1,112 +1,28 @@
 
-body {
-	color: #111111;
-}
 header {
-	background-color: #181314;
-	padding-left: 10px;
-	padding-bottom: 20px;
+	color: #0a0a0a;
+	font-family: "Helvetica";
+	font-weight: bold;
+	line-height: 16px;
+	padding: 16px;
 	padding-top: 40px;
-	font-family: "Limelight", sans-serif;
-	line-height: 90px;
 }
-#deco {
-	color: rgb(222, 53, 27);
-}
-#invisible {
-	font-family: "Londrina Shadow", sans-serif;
-	font-size: 100px;
-	color: #ffffff;
-}
+
 h1 {
-	font-size: 40px;
-	color: #e4e4e4;
-	line-height: 90px;
+	font-size: 42px;
 }
-h2 {
-	font-size: 24px;
+h2 { 
+	font-size: 92px;
 }
-article {
-	
-	margin-top: 40px;
-	font-family: "Raleway", sans-serif;
-}
-p {
-	font-size: 16px;
-	line-height: 172%;
-	margin-bottom: 40px;
+#titlecontinue {
+	font-size: 65.5px;
+	font-family: "Oxanium", sans-serif;
+	font-style: normal;
 }
 h3 {
-	font-family: "Limelight", sans-serif;
-	margin-bottom: 20px;
-	font-size: 28px;
-}
-h4 {
-	font-size: 18px;
-	font-family: "Raleway", sans-serif;
-	font-weight: 700;
-	color: #616161;
-	margin-bottom: 18px;
-}
-
-section {
-	margin: 10px;
-	margin-bottom: 30px;
-}
-.articlesection {
-	border: #111111;
-	border-style: dashed;
-	border-radius: 12px;
-	padding: 10px;
-	margin: 5px;
-	margin-bottom: 20px;
-
-}
-#circle {
-	color: rgb(222, 53, 27);
-}
-.flex-container {
-	justify-content: space-evenly;
-	padding:5px;
-	padding-left: 10px;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	background-color:  rgb(33, 6, 2);
-	border-top: #dfdfdf;
-	border-style: dashed;
-	flex-direction: row;
-	position: -webkit-sticky;
-	position: sticky;
-	top: 0;
-}
-a {
-	margin-right: 26px;
-	color: rgb(241, 241, 241);
-	font-family: "Limelight", sans-serif;
-	font-weight: 400;
-	font-size: 16px;
-}
-.articlelink {
-	display: flex;
-	gap: 12px;
-}
-#arrow2 {
-	color:  rgb(222, 53, 27);
-	font-size: 30px;
-}
-footer {
-	color: #e4e4e4;
-	background-color: #181314;
-	padding-left: 10px;
-	padding-bottom: 60px;
-
-}
-.footer {
-	font-size: 20px;
-	font-family: "Limelight", sans-serif;
-}
-.authorfooter {
-	font-size: 40px;
-	font-family: "Londrina Shadow", sans-serif;
-	line-height: 10px;
+	font-size: 17px;
+	font-family: "Helvetica";
+	font-weight: bold;
+	font-style: normal;
+	line-height: 180%;
 }
