--- a/article-discipline/style.css
+++ b/article-discipline/style.css
@@ -20,9 +20,18 @@ h2 {
 	font-style: normal;
 }
 h3 {
-	font-size: 17px;
+	font-size: 28px;
 	font-family: "Helvetica";
 	font-weight: bold;
 	font-style: normal;
 	line-height: 180%;
+	margin-left: 16px;
+}
+h4 {
+	font-size: 24px;
+	margin-left: 16px;
+}
+#author {
+	font-size: 17px;
+	margin-left: 0;
 }
