--- a/article-discipline/style.css
+++ b/article-discipline/style.css
@@ -35,3 +35,30 @@ h4 {
 	font-size: 17px;
 	margin-left: 0;
 }
+#navbar {
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 5;
+	position: fixed;
+	background-color: #ffffff;
+	border-top: #0a0a0a;
+	border-style: inset;
+	font-family: 'Helvetica';
+  }
+
+  a {
+	float: left;
+	display: block;
+	text-align: center;
+	padding: 16px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	color: #0a0a0a;
+	font-size: 18px;
+	font-weight: 550;
+	text-decoration: none;
+  }
+  #discipline {
+	color: blue;
+  }
