--- a/article-factory/style.css
+++ b/article-factory/style.css
@@ -25,3 +25,43 @@ h3 {
 	font-weight: bold;
 	font-style: normal;
 }
+#navbar {
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 100;
+	position: fixed;
+	background-color: #ffffff;
+	border-top: #0a0a0a;
+	border-style: inset;
+	font-family: 'Helvetica';
+  }
+
+  a {
+	float: left;
+	display: block;
+	text-align: center;
+	padding: 16px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	color: #0a0a0a;
+	font-size: 18px;
+	font-weight: 550;
+	text-decoration: none;
+  }
+  
+#arrow {
+	color: rgb(32, 32, 32);
+	background-color: rgb(255, 255, 255);
+	border: #0a0a0a;
+	border-style: inset;
+	border-radius: 8px;
+	font-size: 24px;
+	font-weight: bold;
+	padding: 10px;
+	bottom: 90px;
+	left: 314px;
+	right: 10px;
+	z-index: 100;
+	position: fixed;
+}
