--- a/style.css
+++ b/style.css
@@ -1,23 +1,38 @@
 header {
 	background-color: #464646;
+	padding: 16px;
+	padding-top: 40px;
 }
-
 h1 {
 	font-family: 'Helvetica';
-	color: aliceblue;
-	font-weight: bold;
-	font-size: 80px;
+	color: white;
+	font-size: 64px;
 }
-.crime {
-	display: inline-block;
-	transform: rotate(0deg);
-	
+mark {
+	background-color: yellow;
 }
 
-.discipline {
-	display: inline-block;
-	transform: rotate(-90deg);
-	margin: 20px;
-	padding-right: 200px;
-	padding-top: 100px;
-}
+#navbar {
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 100;
+	position: fixed;
+	background-color: #ffffff;
+	border-top: #0a0a0a;
+	border-style: inset;
+	font-family: 'Helvetica';
+  }
+
+  a {
+	float: left;
+	display: block;
+	text-align: center;
+	padding: 16px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	color: #0a0a0a;
+	font-size: 18px;
+	font-weight: 550;
+	text-decoration: none;
+  }
