--- a/style.css
+++ b/style.css
@@ -1,15 +1,37 @@
 header {
-	background-color: #464646;
+	background-color: #0c0b0b;
+	color: #f5f5f5;
 	padding: 16px;
+	line-height: 100px;
 	padding-top: 40px;
+	padding-bottom: 400px;
+	position: relative;
+	z-index: 200;
+}
+
+body {
+	background-color: #dcdcdc;;
 }
 h1 {
-	font-family: 'Helvetica';
-	color: white;
-	font-size: 64px;
+	font-family: 'Montserrat';
+	color: #f4f4f4;
+	font-size: 74px;
+	font-style: normal;
+	font-weight: bolder;
+}
+
+h2 {
+	border: #fcfcfc;
+	border-style: solid;
+	font-family: 'Montserrat';
+	font-size: 24px;
+	padding: 2px;
+}
+#crime {
+	color: #ED4A34;
 }
 mark {
-	background-color: yellow;
+	background-color: #ED4A34;
 }
 
 #navbar {
@@ -29,10 +51,26 @@ mark {
 	display: block;
 	text-align: center;
 	padding: 16px;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-top: 30px;
+	padding-bottom: 30px;
 	color: #0a0a0a;
-	font-size: 18px;
+	font-size: 16px;
+	font-family: 'Montserrat';
 	font-weight: 550;
 	text-decoration: none;
   }
+#arrow {
+	color: rgb(32, 32, 32);
+	background-color: rgb(255, 255, 255);
+	border: #0a0a0a;
+	border-style: inset;
+	border-radius: 8px;
+	font-size: 24px;
+	font-weight: bold;
+	padding: 10px;
+	bottom: 90px;
+	left: 314px;
+	right: 10px;
+	z-index: 100;
+	position: fixed;
+}
