--- a/style.css
+++ b/style.css
@@ -19,13 +19,23 @@ h1 {
 	font-style: normal;
 	font-weight: bolder;
 }
-
-h2 {
+.container-text {
+	display: flex;
+	justify-content: center;
+	margin-top: 10px;
 	border: #fcfcfc;
 	border-style: solid;
+	border-radius: 100px;
+	align-items: center;
+	margin-right: 40px;
+	height: 54px;
+}
+
+#subtitle {
 	font-family: 'Montserrat';
-	font-size: 24px;
-	padding: 2px;
+	font-size: 17px;
+	font-weight: 500;
+	text-align: center;
 }
 #crime {
 	color: #ED4A34;
