--- a/style.css
+++ b/style.css
@@ -1,16 +1,29 @@
 header {
-	background-color: #0c0b0b;
 	color: #f5f5f5;
 	padding: 16px;
 	line-height: 120px;
 	padding-top: 40px;
-	padding-bottom: 300px;
+	padding-bottom: 200px;
 	position: relative;
 	z-index: 200;
 }
+.sticky {
+	background-color: #c5c5c5;
+	border-bottom: 2px solid #000000;
+	border-top: 2px solid #000000;
+	position: sticky;
+	top: 0;
+	z-index: 3;
+	padding-top: 20px;
+	padding-bottom: 10px;
+
+}
+header {
+	transform: rotate(-24deg);
+}
 
 body {
-	background-color: #dcdcdc;
+	background-color:#0c0b0b;
 }
 h1 {
 	font-family: 'Montserrat';
@@ -18,6 +31,8 @@ h1 {
 	font-size: 90px;
 	font-style: normal;
 	font-weight: bolder;
+	stroke: rgb(255, 255, 255);
+	stroke-width: 2px;
 }
 .container-text {
 	display: flex;
@@ -55,15 +70,15 @@ h1 {
 .factory {
 	display: flex;
 	gap: 20px;
-	-webkit-animation: loop 20s infinite linear;
-	animation: loop 20s infinite linear;
+	-webkit-animation: loop 18s infinite linear;
+	animation: loop 18s infinite linear;
 
 }
 .discipline {
 	display: flex;
 	gap: 20px;
-	-webkit-animation: loop 12s infinite linear;
-	animation: loop 12s infinite linear;
+	-webkit-animation: loop 10s infinite linear;
+	animation: loop 10s infinite linear;
 }
 @keyframes loop {
 	100% {
@@ -132,22 +147,12 @@ h3 {
 	margin-left: 16px;
 	line-height: 145%;
 }
-
-.sticky {
-	background-color: #c5c5c5;
-	border-bottom: 2px solid #000000;
-	border-top: 2px solid #000000;
-	position: sticky;
-	top: 0;
-	z-index: 1;
-	padding-top: 20px;
-	padding-bottom: 10px;
-
-}
 article {
 	margin-top: 0;
+	background-color: #e4e4e4;
 }
 section {
 	margin-bottom: 200px;
 	padding-top: 40px;
+	background-color: #e4e4e4;
 }
